--- a/_sass/pages/_boardroom2.scss
+++ b/_sass/pages/_boardroom2.scss
@@ -2,7 +2,7 @@
   .profiles-sidebar {
     .card-img-top { width: 4rem; border-radius: 50%; }
     li { cursor: pointer; margin-bottom: .75rem; }
-    li.active { background: $primary; color: #fff; border-radius: .25rem; }
+    li.active { background: $primary; color: #ffffff; border-radius: .25rem; }
   }
 
   .profile-detail {
