--- a/_sass/pages/_startup.scss
+++ b/_sass/pages/_startup.scss
@@ -24,7 +24,7 @@
         @extend .h-100;
         @include transition(transform, 0.3s, ease);
 
-        &:hover {
+        &:hover, &:focus {
           transform: translateY(-5px);
           @extend .shadow;
         }
