chore: deploy businessinfinity changes

--- a/theme.asisaga.com/_sass/fontawesome/_mixins.scss
+++ b/theme.asisaga.com/_sass/fontawesome/_mixins.scss
@@ -3,7 +3,7 @@
 @use 'variables' as v;
 
 // base rendering for an icon
-@mixin fa-icon($family: v.$family) {
+@mixin fa-icon($family) {
   --_#{v.$css-prefix}-family: var(--#{v.$css-prefix}-family, var(--#{v.$css-prefix}-style-family, '#{$family}'));
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
