chore: deploy businessinfinity changes

--- a/theme.asisaga.com/_sass/fontawesome/_variables.scss
+++ b/theme.asisaga.com/_sass/fontawesome/_variables.scss
@@ -9,7 +9,7 @@ $icon-property         : --fa !default;
 
 $display               : inline-block !default;
 
-$fw-width              : calc((20/16) * 1em) !default;
+$fw-width              : 1.25em !default; // 20/16 = 1.25
 $inverse               : #fff !default;
 
 $border-box-sizing     : content-box !default;
@@ -45,7 +45,7 @@ $primary-opacity       : 1 !default;
 $secondary-opacity     : .4 !default;
 
 $stack-vertical-align  : middle !default;
-$stack-width           : ($fw-width * 2) !default;
+$stack-width           : 2.5em !default; // 1.25em * 2
 $stack-z-index         : auto !default;
 
 // web fonts-related variables
