chore: deploy businessinfinity changes

--- a/theme.asisaga.com/_sass/fontawesome/_core.scss
+++ b/theme.asisaga.com/_sass/fontawesome/_core.scss
@@ -7,7 +7,7 @@
 .#{v.$css-prefix}-regular,
 .#{v.$css-prefix}-brands,
 .#{v.$css-prefix}-classic,
-.fas,
+// .fas removed for v4 compatibility
 .far,
 .fab,
 .#{v.$css-prefix} {
@@ -15,7 +15,7 @@
 }
 
 :is(
-  .fas,
+  // .fas removed for v4 compatibility
   .far,
   .fab,
   .#{v.$css-prefix}-solid,
@@ -29,7 +29,7 @@
 
 @supports not (content: ''/'') {
 :is(
-  .fas,
+  // .fas removed for v4 compatibility
   .far,
   .fab,
   .#{v.$css-prefix}-solid,
