--- a/theme.asisaga.com/_sass/fontawesome/solid.scss
+++ b/theme.asisaga.com/_sass/fontawesome/solid.scss
@@ -25,7 +25,7 @@
 }
 
 
-.fas {
+// .fas removed for v4 compatibility
   --#{v.$css-prefix}-family: var(--#{v.$css-prefix}-family-classic);
   --#{v.$css-prefix}-style: 900;
 }
